--- a/public/style.scss
+++ b/public/style.scss
@@ -8,7 +8,9 @@
     --rightFont: 50px;
     --background-1: rgb(18, 27, 160);
     --background-2: rgb(25, 28, 190);
-    --background-3: rgb(20, 21, 83);
+    --background-3: rgb(17, 9, 94);
+    --background-4: rgb(255, 239, 97);
+    --background-5: rgb(231, 211, 31);
 }
 * {
     margin: 0;
@@ -175,7 +177,7 @@
 }
 .teams{
     position: absolute;
-    top: 15vh;
+    top: 25vh;
     left: 0;
     z-index: 10;
     width: 100vw;
@@ -184,6 +186,7 @@
     gap: 60vw;
     .teamA{
         padding: 0 0.5rem 0 0.5rem;
+        font-size: 0.6rem;
         width: 13vw;
         color: rgba(215, 216, 208, 0.95);
         transform: skewX(-15deg);
@@ -193,6 +196,7 @@
     }
     .teamB{
         padding: 0 0.5rem 0 0.5rem;
+        font-size: 0.6rem;
         width: 13vw;
         color: rgba(215, 216, 208, 0.95);
         transform: skewX(-15deg);
@@ -249,15 +253,21 @@
 .question__outer{
     position: absolute;
     z-index: 100;
-    top: 7vh;
+    top: 2vh;
     left: 0;
-    width: 100vw;
+    width: 99vw;
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
     .question{
-        color: rgba(215, 216, 208, 0.95);
-        font-size: 0.725rem;
+        width: 85%;
+        color: rgba(0, 0, 0, 0.95);
+        font-size: 0.625rem;
+        transform: skewX(-15deg);
+        padding: 0.5em 0 0.5em 0;
+        background-color: var(--background-5);
+        border: solid 9px var(--background-4);
     }
 }
 
